detail page error solved, ticket alignment

--- a/src/styles/Ticket.module.scss
+++ b/src/styles/Ticket.module.scss
@@ -11,6 +11,7 @@
   background-color: $cardGrey;
   margin-right: 7%;
   border-radius: 15px;
+  margin-top: 0%;
 }
 
 .ui.buttons > .ui.grey.positive {
@@ -33,4 +34,5 @@
   background-color: $cardGrey;
   margin-right: 7%;
   border-radius: 15px;
+  margin-top: 0%;
 }
